--- a/cases/1.md
+++ b/cases/1.md
@@ -1,26 +1,104 @@
 # 某热镀锌工厂管理系统
 
-## 概述
-	本系统针对某热镀锌加工厂的生产环节，实现IT化管理。
-	该热镀锌工厂的生产流程大致为:
+## 1. 本系统价值所在
+
+该工厂的老板希望，业务人员／管理人员应该真正把精力投入到拓展客户，提升工厂技术水平等高价值的工作上，而实际上，这些人员大部分的精力都花在理清内部的纷乱琐事上。 他希望通过这样一套管理系统，解放业务人员/管理人员，让他们聚焦到更有价值的开拓性事务上。
+
+## 2. 本系统特色
+
+### 2.1. 可视化订单管理追踪　
+
+系统根据订单在系统的行进信息，自动生成概览图。
+
+如下图所示，某个订单可能拆分成多个子订单，又进一步拆分成多个工单。工单生产完毕后，进一步的生成仓单。这个复杂的流程，通过这张概览图可以一目了然。
+特别这张概览图中的每根横线，都代表系统实际存在的一个对象，这些横线都是直接点击，跳转到对应的对象详情。
+
+~[订单概览图](img/cases/1/order_bird_view.png) 
+
+### 2.2. 全流程管理
+支持对整个订单的全生命周期进行管理
+
+### 2.3. 手机浏览器友好
+
+~[手机卸货管理图](img/cases/1/use_phone.png)
+
+### 2.4. 清晰的数字报表
+
+ 支持自动生成班组绩效报表等多张报表, 如下图所示:
+
+~[绩效报表](img/cases/1/production_overview.png)
+
+
+## 3. 功能概述
+
+本系统针对某热镀锌加工厂的生产环节，实现IT化管理。
+该热镀锌工厂的单个订单生产流程大致为:
 
 ```mermaid
 graph LR
-A-->B
-B-->C
-C-->A
-D-->C
+来料入库管理-->部门分配
+部门分配-->生产管理
+生产管理-->质检管理
+质检管理-->入库管理
+入库管理-->发货管理
 ```
+
+  相关的用户角色包括:
+
+  * 卸货/发货管理员
+  * 生产调度员
+  * 车间主任
+  * 班组长
+  * 业务员
+  * 财务
+  * 卸货/装货工
 	
-	本管理系统对上述生产流程进行自动化管理。并且包含统计报表模块，便于对班组绩效进行统计。特别的:
+
+本管理系统对上述生产流程进行自动化管理。并且包含统计报表模块，便于对班组绩效进行统计。特别需求包括:
 	
-	1. 对订单要求进行全流程可视化管理，便于业务人员对订单进行跟踪，对客户进行汇报。
-	2. 热镀锌车间生产环境较为恶劣， 只能利用移动设备(如手机)在车间内进行操作。
+1. 对订单要求进行全流程可视化管理，便于业务人员对订单进行跟踪，对客户进行汇报。
+2. 热镀锌车间生产环境较为恶劣, 仓库装卸工要经常移动， 只能利用移动设备(如手机)在车间内进行操作。
+3. 由于业务人员或者公司老总可能要离开工厂进行办公， 本套系统要求支持适配手机浏览器
 
-## FAQ
+## 4. FAQ
 
-Q: 市面上已经有大量的生产管理软件，为什么该厂还要专门定制一套生产软件？
-A: 市面上的生产管理软件不能专门针对该厂的生产环节进行定制。而且各个软件之间（比如仓储，财务软件），无法进行互通， 只能通过人工操作保持一致性， 导致经常性的数据不一致， 产生纠纷。
+***Q: 市面上已经有大量的生产管理软件，为什么该厂还要专门定制一套生产软件？***
 
-Q: 
+A: 市面上的生产管理软件不能专门针对该厂的生产环节进行定制。而且各个软件之间（比如仓储，财务软件），无法进行互通， 只能通过人工操作保持一致性， 导致经常性的数据不一致， 造成部门间纠纷。所有要专门定制一套全流程的生产管理系统
+
+
+***Q: 我不了解工厂究竟是怎么生产的，在系统上线之前，为什么生产环节存在混乱情况？***
+
+A:　一个较长的流程，存在很多相关的数据，例如来料重量和分解后的单个加工任务的重量之间存在一定关联，这么多的数据，尤其是一个流程在时间跨度上很长的时候，靠人工(记录excel表格)来保持这些数据的一致性，基本不可能。出错了，也很难去查证问题出在哪里。
+    举几个例子:
+    
+ 1. 客户Ａ和Ｂ各有一批来料要加工，他们的来料一样，都是螺丝，发货时，如果不根据唯一的订单号进行跟踪，发货人员可能就将Ｂ的货发给Ａ
+ 2. 由于班组之间存在竞争关系（该工厂进行计件工资制），于是当某个班组下班后，另外一个班组可能就有意无意的将另外一个班组的工单拿来自己自己，这样在内部造成了很大的纠纷
+ 3. 业务人员向客户汇报生产进展时，经常需要问车间主任，车间主任可能又要去问班组。如果部分来料已经加工完毕，还需要问仓库管理员。这个查询流程费时费力，给客户也造成了很大的困扰
+
+## 5. 系统架构图
+
+本系统采用micro services架构。前端由WEB APPLICATION + 安卓客户端组成。两者访问同一个接口服务器. 如下图所示:
+
+  ~[litefac架构图](img/cases/1/litefac-arch.png)
+
+## 6. 主要技术难点
+
+### 订单流程概览图的自动生成
+
+我们利用了svg格式来生成订单流程概览图。
+
+为了避免各个实体对象之间存在互相覆盖的情况，我们必须采用深度优先的办法，递归去生成订单流程图。递归的顺序为:
+
+```mermaid
+graph LR
+订单-->子订单
+子订单-->工单
+工单-->仓单
+仓单-->发货单
+```
+
+例如，当递归完一个子订单后，就可以计算出该子订单所占区域的高度，这样就可以在该高度以外，继续生成下一个子订单
+
+
 
