--- a/cases/2.md
+++ b/cases/2.md
@@ -1,3 +1,24 @@
-# CASE 2
+# NFC防伪应用
 
-blablabla
+## 项目概述
+
+本项目目标是帮助一家初创企业以低成本快速完成第一阶段产品，帮助其融资或者出售。后来，该公司也成功的出售了自己。
+
+该产品对粘贴在零售的单件商品(即SKU，如一包香烟，一瓶白酒)的NFC标签进行手机扫描， 然后对扫描出的数据进行后台校验，进而对商品的真伪进行校验。由于NFC芯片较难复制， 所以这种校验方式非常可靠
+
+同时，用户也可以通过手机查找附近有厂家认证真品的零售商。
+
+此产品包含两大部分:
+
+ * 管理后台
+ 供厂家和零售商录入SPU/SKU， 位置信息，
+
+ * 手机客户端
+ 包含安卓和IOS两个客户端。
+
+
+
+
+
+
+
