--- a/cases/6.md
+++ b/cases/6.md
@@ -1,3 +1,35 @@
-# CASE 1
+# 加气站垂直搜索
 
-blablabla
+
+## 主要技术难点
+
+1. 基于地理位置的范围内搜索
+
+客户端的要求是： 给定一个手机屏幕范围，要求找出在这个范围（由右上角和左下角的经纬度决定）内，所有符合条件的加气站，特别要求:
+
+    * 如果某些加气站离的位置足够近，由后台对其进行合并(cluster)。
+    * 如果当前手机屏幕范围内没有信息点， 要找到最近的信息点， 并且通知客户端进行地图缩小
+
+为了高效找出范围内所有符合条件的加气站，利用经典的四叉树，先将所有的信息点存储在这棵四叉树里，即将这些信息点分布在一级级的地图瓦片中(tile)。 然后找到范围中心点所在的瓦片， 一圈圈的向外扩展， 直到找到范围内所有符合条件的加气站，并且按距离地图中心点的位置进行排序。
+
+如果范围内没有信息点， 那么我们可以进一步向外去找，直到找到一个符合条件的信息点，这时需要计算出地图缩小多少倍(需要维持地理中心不变)，才能展示该信息点。
+
+如果范围内信息点过多，我们需要进行合并， 合并的原则是，我们将手机屏幕分割为16X16个小块，保证一个小块中只能展示一个信息点。这实际上意味着，根据当前的缩放等级，向下找寻两层的瓦片， 将这些瓦片中的信息点合并为一个即可。
+
+2. 关键词搜索 
+
+首先需要确认的是： 这是一个垂直搜索，而不是类似谷歌的通用搜索， 而且在手机端也不可能输入大段文字进行搜索。而且为了使用便捷性：还需要支持根据拼音首字母进行搜索提示。
+
+在上述前提下， 我们做出了如下假设，用户的输入分成了两类：加气站名称，道路（搜索道路沿线），地区（比如杭州市萧山区），而我们不再对用户输入的关键词进行分词，我们认为用户输入的就是一个完整的关键词。
+
+而为了做出最准确的匹配，对录入的加气站数据，需要做出名称和道路的规范化，对于名称一律只保留加气站名称（即不包含地名，"建德市大华加气站"要规范为"大华加气站"）, 道路名要规范为形如"G6京藏高速"， 这样通过简单的正则匹配，就可以将关键词精确的提取出来。然后根据名称，道路和地址进行准确的搜索。
+
+## FAQ
+
+-----
+**Q: 高德地图提供了基于地理位置的搜索接口， 为什么不直接利用高德地图来实现相关搜索功能**
+
+A: 简单的说， 高德地图提供的搜索接口不符合本项目的需求， 高德提供的接口是： 查找某范围内所有的信息点， 但是该项目存在这样的业务需求：找到最近的符合条件的若干个信息点。
+
+考虑一种极端的情况：用户当前在北京搜索加气站，但是符合搜索条件（比如关键词，道路）的最近加气站可能在海南岛。这样实际上无法事先得知最近的加气站在哪里。如果利用高德的搜索接口，只能在全国范围内进行搜索， 然后再过滤，这显然是无法接受的。
+
